--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ProfileActivity"/>
+        <activity android:name=".EditProfileActivity"/>
         <activity
             android:name=".NavigationDrawerActivity"
             android:label="@string/app_name"
