--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Built application files
 /*/build/
+/build/*/
 
 # Crashlytics configuations
 com_crashlytics_export_strings.xml
@@ -25,6 +26,7 @@ local.properties
 .idea/modules.xml
 .idea/scopes/scope_settings.xml
 .idea/vcs.xml
+.idea/gradle.xml
 *.iml
 
 # OS-specific files
