--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,24 @@
           package="com.along.android.healthmanagement">
 
     <application
+        android:name="com.orm.SugarApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.orm.SugarApp">
-
-        <meta-data android:name="DATABASE" android:value="HealthManagement.db" />
-        <meta-data android:name="VERSION" android:value="5" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.along.android.healthmanagement.entities" />
+        android:theme="@style/AppTheme">
+        <meta-data
+            android:name="DATABASE"
+            android:value="HealthManagement.db"/>
+        <meta-data
+            android:name="VERSION"
+            android:value="5"/>
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true"/>
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="com.along.android.healthmanagement.entities"/>
 
         <activity android:name=".activities.LoginActivity">
             <intent-filter>
@@ -22,14 +29,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity" />
-        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.MainActivity"/>
+        <activity android:name=".activities.RegisterActivity"/>
         <activity android:name=".activities.ProfileActivity"/>
         <activity android:name=".activities.EditProfileActivity"/>
         <activity
             android:name=".activities.NavigationDrawerActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".activities.ForgetPasswordActivity"/>
     </application>
 
 </manifest>
