--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Built application files
 /*/build/
-/build/*/
+/build/generated/
 
 # Crashlytics configuations
 com_crashlytics_export_strings.xml
