--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Built application files
 /*/build/
-/build/generated/
-/build/intermediates/
+/build/
 
 # Crashlytics configuations
 com_crashlytics_export_strings.xml
