vital sign detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
             </intent-filter>
         </receiver>
         <activity android:name=".activities.MedicationDetailsActivity"></activity>
+        <activity android:name=".activities.VitalSignDetailsActivity"></activity>
     </application>
 
 </manifest>
