--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.android.gms:play-services-auth:10.2.0'
     compile 'com.github.satyan:sugar:1.4'
