--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.along.android.healthmanagement">
 
+    <!-- To access camera for barcode scanning -->
+    <uses-permission android:name="android.permission.CAMERA" />
     <!-- To access Google+ APIs: -->
-    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -40,8 +41,8 @@
         <activity
             android:name=".activities.NavigationDrawerActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".activities.AlertDialogActivity" android:theme="@style/Theme.Transparent">
         </activity>
         <receiver
