--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.RegisterActivity" />
-        <activity android:name=".activities.ProfileActivity" />
         <activity android:name=".activities.EditProfileActivity" />
         <activity android:name=".activities.ForgetPasswordActivity" />
         <activity
@@ -54,6 +53,7 @@
         </receiver>
         <activity android:name=".activities.MedicationDetailsActivity"></activity>
         <activity android:name=".activities.VitalSignDetailsActivity"></activity>
+        <activity android:name=".activities.NoteDetailActivity" />
     </application>
 
 </manifest>
