--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.github.john990:WaveView:v0.9'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 apply plugin: 'com.google.gms.google-services'
