--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.along.android.healthmanagement"
-        minSdkVersion 23
-        targetSdkVersion 25
+        minSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -24,20 +24,28 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:26.+'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:design:26.+'
     compile 'com.google.android.gms:play-services-auth:10.2.0'
     compile 'com.github.satyan:sugar:1.4'
-    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:support-v4:26.+'
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.android.support:cardview-v7:25.2.0'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:cardview-v7:26.+'
+    compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.github.john990:WaveView:v0.9'
     testCompile 'junit:junit:4.12'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    // network
+    compile 'com.lzy.net:okgo:3.0.4'
+    compile 'com.lzy.net:okrx2:2.0.2'
+
+    //json
+    compile 'com.google.code.gson:gson:2.8.2'
 }
 apply plugin: 'com.google.gms.google-services'
